# SpokaneTech_Py

./: .dockerignore  .env.template  .gitignore  404.html  Dockerfile  Procfile  README.md  az-docker-compose.yml  dagger.json  docker-compose.yml  fly.toml  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  STYLE_GUIDE.md  VISION.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  question.yaml
.github/workflows/: bandit-actions.yaml  bandit.yaml  black.yaml  deploy.yml  deploy_azure.yml  deploy_docs.yaml  deploy_worker_azure.yml  django_check.yaml  main_spokanetech-celery.yml  main_spokanetech.yml  ruff-actions.yaml  ruff.yaml  ruff_format.yaml  ruff_lint.yaml  spokanetech-worker-AutoDeployTrigger-fc8cee79-456f-47ed-afcd-bc09fe68767b.yml  test.yaml  test.yml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
STYLE_GUIDE/: index.html
celery/: index.html
dagger/src/: linters.py  main.py
docs/: CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Infrastructure.md  STYLE_GUIDE.md  celery.md  index.md  infrastructure.md  mkdocs.yml  vision.md
docs/docs/: styleguide.md
docs/docs/static/: main.css
infrastructure/: index.html
requirements/: dev.txt
scripts/: entrypoint.sh  post_deploy.sh
search/: search_index.json
src/: flowerconfig.py  manage.py
src/spokanetech/: asgi.py  backend.py  celery.py  settings.py  urls.py  wsgi.py
src/static/: index-styles.css  main.css  package.json  site.webmanifest
src/templates/: 429.html  base.html  sidebar.htm
src/templates/spokanetech/: base.html  footer.htm  navbar.htm  (+1 more)
src/web/: admin.py  forms.py  middleware.py  models.py  scrapers.py  services.py  tasks.py  urls.py  views.py  widgets.py
vision/: index.html
(+81 files in other folders)
